@@ -31,9 +31,7 @@ requires 'Net::IP'            => '0';
 requires 'Text::Template'     => '0';
 requires 'UNIVERSAL::require' => '0';
 requires 'XML::TreePP'        => '0.26';
-if ($OSNAME =~ /darwin/i) {
-    requires 'XML::XPath'        => '0';
-}
+requires 'XML::XPath'         => '0';
 
 if ($OSNAME eq 'MSWin32') {
     requires 'Win32::OLE'         => '0';
