@@ -1,0 +1,30 @@
+
+# Set this to no or 0 to enable Inventory HTTP::Daemon Server plugin and
+# permit remote inventory request for this agent
+disabled = yes
+
+# Set base url matching for API
+#url_path = /proxy
+
+# Port on which to listen for inventory requests, default to legacy port
+#port = 62354
+
+# The delay the proxy should return as contact timeout to agents (in hours)
+#prolog_freq = 24
+
+# Option to handle proxy local storing. Set a folder full path as local_store to
+# also store received XML locally. Set only_local_store to not immediatly send
+# received XML to known server(s).
+#only_local_store = no
+#local_store = 
+
+# To limit any abuse we expect a maximum of 30 requests by hour and by ip (3600 seconds)
+# You can adjust the rate limitation by updating the requests number limit
+# or the period on which apply the requests number limit
+#maxrate        = 30
+#maxrate_period = 3600
+
+# You should create and define you specific parameter in the following
+# included configuration file to override any default.
+# For example just set "disabled = no" in it to enable the plugin
+include "proxy-server-plugin.local"
